--- a/css/agency.css
+++ b/css/agency.css
@@ -429,6 +429,20 @@ header.masthead {
     text-transform: none; }
   .team-member p {
     margin-top: 0; }
+    
+.team-member-small {
+  margin-bottom: 50px;
+  text-align: center; }
+  .team-member-small img {
+    width: 175px;
+    height: 175px;
+    border: 7px solid white; }
+  .team-member-small h4 {
+    margin-top: 25px;
+    margin-bottom: 0;
+    text-transform: none; }
+  .team-member-small p {
+    margin-top: 0; }
 
 section#contact2 {
   background-color: #222222;
