--- a/css/agency.css
+++ b/css/agency.css
@@ -11,9 +11,9 @@ p {
   line-height: 1.75; }
 
 a {
-  color: #124A92; }
+  color: #2283ff; }
   a.active, a:active, a:focus, a:hover {
-    color: #ffaa0c; }
+    color: #ce3232; }
 
 h1,
 h2,
@@ -61,7 +61,7 @@ body {
   -webkit-tap-highlight-color: #124A92; }
 
 #mainNav {
-  background-color: #eeeeee; 
+  background-color: #090A0F;
   border-bottom: 1px solid; }
   #mainNav .navbar-toggler {
     font-size: 12px;
@@ -74,20 +74,20 @@ body {
     font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif;
     text-transform: uppercase; }
   #mainNav .navbar-brand {
-    color: #124A92;
+    color: #2283ff;
     font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, cursive; }
     #mainNav .navbar-brand.active, #mainNav .navbar-brand:active, #mainNav .navbar-brand:focus, #mainNav .navbar-brand:hover {
-      color: #ffaa0c; }
+      color: #ce3232; }
   #mainNav .navbar-nav .nav-item .nav-link {
     font-size: 90%;
     font-weight: 400;
     padding: 0.75em 0;
     letter-spacing: 1px;
-    color: #000000;
+    color: #eeeeee;
     font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif;
     text-transform: uppercase; }
     #mainNav .navbar-nav .nav-item .nav-link.active, #mainNav .navbar-nav .nav-item .nav-link:hover {
-      color: #124A92; }
+      color: #2283ff; }
 
 @media (min-width: 992px) {
   #mainNav {
@@ -108,7 +108,7 @@ body {
     #mainNav.navbar-shrink {
       padding-top: 0;
       padding-bottom: 0;
-      background-color: #eeeeee;
+      background-color: #090A0F;
       border-bottom: 1px solid; }
       #mainNav.navbar-shrink .navbar-brand {
         font-size: 1.25em;
@@ -116,7 +116,7 @@ body {
 
 header.masthead {
   text-align: center;
-  color: #000000;
+  color: #FFF;
   background-image: url("../img/header-bg.jpg");
   background-repeat: no-repeat;
   background-attachment: scroll;
@@ -431,7 +431,7 @@ header.masthead {
     text-transform: none; }
   .team-member p {
     margin-top: 0; }
-    
+
 .team-member-small {
   margin-bottom: 50px;
   text-align: center; }
@@ -538,16 +538,16 @@ ul.social-buttons {
   .btn-primary.focus, .btn-primary:focus {
     color: white;
     border-color: #b48b01;
-    background-color: #ffaa0c; }
+    background-color: #ce3232; }
   .btn-primary:hover {
     color: white;
     border-color: #f6bf01;
-    background-color: #ffaa0c; }
+    background-color: #ce3232; }
   .btn-primary.active, .btn-primary:active,
   .open > .btn-primary.dropdown-toggle {
     color: white;
     border-color: #f6bf01;
-    background-color: #ffaa0c; }
+    background-color: #ce3232; }
     .btn-primary.active.focus, .btn-primary.active:focus, .btn-primary.active:hover, .btn-primary:active.focus, .btn-primary:active:focus, .btn-primary:active:hover,
     .open > .btn-primary.dropdown-toggle.focus,
     .open > .btn-primary.dropdown-toggle:focus,
@@ -581,16 +581,16 @@ ul.social-buttons {
   .btn-xl.focus, .btn-xl:focus {
     color: white;
     border-color: #b48b01;
-    background-color: #ffaa0c; }
+    background-color: #ce3232; }
   .btn-xl:hover {
     color: white;
     border-color: #f6bf01;
-    background-color: #ffaa0c; }
+    background-color: #ce3232; }
   .btn-xl.active, .btn-xl:active,
   .open > .btn-xl.dropdown-toggle {
     color: white;
     border-color: #f6bf01;
-    background-color: #ffaa0c; }
+    background-color: #ce3232; }
     .btn-xl.active.focus, .btn-xl.active:focus, .btn-xl.active:hover, .btn-xl:active.focus, .btn-xl:active:focus, .btn-xl:active:hover,
     .open > .btn-xl.dropdown-toggle.focus,
     .open > .btn-xl.dropdown-toggle:focus,
