--- a/css/agency.css
+++ b/css/agency.css
@@ -119,7 +119,7 @@ header.masthead {
   color: #FFF;
   background-image: url("../img/header-bg.jpg");
   background-repeat: no-repeat;
-  background-attachment: scroll;
+  background-attachment: local;
   background-position: center center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -143,7 +143,7 @@ header.masthead {
 @media (min-width: 768px) {
   header.masthead .intro-text {
     padding-top: 300px;
-    padding-bottom: 200px; }
+    padding-bottom: 300px; }
     header.masthead .intro-text .intro-lead-in {
       font-size: 32px;
       line-height: 32px;
